--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
   <!DOCTYPE html>
   <html lang="ja">
   <head>
-  
+     <meta charset="UTF-8">
   </head>
   <body>
+   <div>
+     <h1 id="title">タイトル</h1>
+     <p class="message">こんにちは</p>
+   </div> 
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+       <script src="js/script.js"></script>
   </body>
   </html>
