--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
      <meta charset="UTF-8">
   </head>
   <body>
-   <div>
-     <h1 id="title">タイトル</h1>
-     <p class="message">こんにちは</p>
-   </div> 
+   <ul>
+     <li class="list-test">項目1</li>
+     <li class="sample-list">項目2</li>
+     <li class="sample-text">項目3</li>
+   </ul>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
        <script src="js/script.js"></script>
   </body>
