--- a/dom.html
+++ b/dom.html
@@ -7,8 +7,8 @@
  </head>
  
  <body>
-   <button id="append">append</button>
-      <button id="remove">remove</button>
+   <button id="show">show</button>
+      <button id="hide">hide</button>
    <ul>
      <li>Python</li>
      <li>Ruby</li>
